--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,6 +21,7 @@ jobs:
             uses: actions/setup-java@v3
             with:
                java-version: '11'
+               distribution: 'zulu'
 
          -  name: Run tests
             run: ./gradlew check
