--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
                fetch-depth: 0
                ref: ${{ github.event.inputs.branch }}
 
+         -  name: Setup JDK
+            uses: actions/setup-java@v3
+            with:
+               java-version: '11'
+               distribution: 'zulu'
+
          -  name: deploy to sonatype
             run: ./gradlew publish
             env:
